feat(api): Add get children operation in API spec (#12)
